#13 Added some CSS for some visibility adding scrolling would be nice, defect of last text character  not showing fixed

--- a/src/ARdiagram/ARArray.css
+++ b/src/ARdiagram/ARArray.css
@@ -6,33 +6,43 @@
   border-radius: 95% 4% 92% 5%/4% 95% 6% 95%;
   transform: rotate(1deg);
   box-shadow: 3px 3px 0 #222;
+  align-content: flex-end;
+  overflow: auto;
 }
 
 .mainArray {
   background: rgb(6, 231, 6);
   border-color: rgb(255, 0, 128);
-  width: 20vw;
+  width: 18vw;
   border-width: 3px 4px 3px 5px;
   border-radius: 95% 4% 92% 5%/4% 95% 6% 95%;
   transform: rotate(1deg);
   box-shadow: 3px 3px 0 #222;
+  margin: 1vw;
+  align-content: flex-end;
+  display:flex; 
+  flex-direction: row;
 }
 .element {
   background: rgb(12, 207, 241);
   border-color: black;
-  width: 5vw;
+  width: 1vw;
   padding: 1vw;
   border-width: 3px 4px 3px 5px;
   border-radius: 95% 4% 92% 5%/4% 95% 6% 95%;
   transform: rotate(1deg);
   box-shadow: 3px 3px 0 #222;
+  margin: 0.2vw;
 }
 
 input {
   outline: none;
   background: none;
   border: none;
-  font-size: 15px;
+  font-size: 10px;
   margin: none;
   padding: none;
+  width: 1vw;
+  align-self: center;
+  text-align: center;
 }
